# sentry

./: .coverage  .env  .gitignore  COBERTURA_SUMMARY.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  SECURITY_INCIDENT.md  SECURITY_RECOVERY_COMPLETE.md  SECURITY_SETUP.md  build.sh  complete_claude_demo.py  coverage.xml  coverage_results.py  debug_claude.py  demo_coverage_analysis.py  deploy.sh  docker-compose.yml  example.py  openai_smoke.py  pyproject.toml  requirements.txt  test_claude_real.py
.github/: copilot-instructions.md
.github/workflows/: pr-coverage-template.yml
config/: env.example  production.env  target_repos.yml
docs/: api.md  cobertura.md  cobertura_support.md  development.md  github_actions.md  multi_language_guide.md  on_demand_setup.md  openai_setup.md
examples/: coverage.xml  java-config.md
src/: __init__.py  main.py  webhook_server.py
src/analyzers/: __init__.py  cobertura_parser.py  code_analyzer.py  coverage_analyzer.py
src/generators/: __init__.py  test_generator.py
src/github_integration/: __init__.py  pr_manager.py
src/utils/: __init__.py  config.py
test-java-project/: README.md  pom.xml
test-java-project/src/main/java/com/example/calculator/: SimpleCalculator.java
test-java-project/src/test/java/com/example/calculator/: SimpleCalculatorAdditionalTest.java  SimpleCalculatorTest.java
tests/: conftest.py  test_cobertura_integration.py  test_cobertura_parser.py  test_coverage_analyzer.py  test_java_path_resolution.py  test_openai_integration.py
